side panel weird gap fix when opening

--- a/public/assets/less/_header.less
+++ b/public/assets/less/_header.less
@@ -1,7 +1,7 @@
 // header toggle
 .aesop-story-single .aesop-story-header-toggle {
     color:@panel-color;
-    .transition(color .2s ease-in-out);
+    .transition(color .15s ease-in-out);
 
     &:hover {
         text-decoration: none;
@@ -26,14 +26,14 @@
     i {
         top:5px;
         position: relative;
-        .transition(all .25s linear);
+        .transition(all .15s linear);
     }
 }
 
 // header open
 .side-open {
     .aesop-story-entry{
-        .translate(@header-width, 0);
+        padding-left:@header-width;
     }
     .aesop-story-header {
         left:0;
@@ -51,7 +51,7 @@
     }
 }
 .aesop-story-entry {
-    .transition(all .25s ease-in);
+    .transition(all .15s ease-in);
 }
 
 // header button visible
@@ -59,7 +59,7 @@
 
     .aesop-story-header-toggle{
         left:0;
-        .transition(left .25s ease-in);
+        .transition(left .15s ease-in);
     }
 
 }
@@ -83,7 +83,7 @@
     background-image: url('../img/quote-texture.png');
     padding:2rem;
     text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
-    .transition(left .25s ease-in);
+    .transition(left .15s ease-in);
     .clearfix();
     .box-shadow(inset -12px 0 12px -8px rgba(0,0,0,0.5));
 
@@ -153,7 +153,7 @@
                 text-align: center;
                 font-family: @font-family-sans-serif;
                 font-size: @font-size-small;
-                .transition(all .2s ease-in-out);
+                .transition(all .15s ease-in-out);
                 .box-shadow(0 0 4px rgba(0,0,0,0.2));
                 border-radius:2px;
 
